netcore-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
    - host: netcore.shay.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: netcore-app-service
                port:
                  number: 8000
